<resources>
    <string name="app_name">onschool</string>
    <string name="berandamu">Berandamu</string>
    <string name="coin_balance_label">Coin Balance: </string>
    <string name="coin_balance_jumlah">100</string>
    <string name="baca_pecahkan">Baca,Pecahkan, dan dapatkan coin onschoolmu</string>
    <string name="activity_main.tittle">Mulai Belajar dengan ONschool!</string>
    <string name="button_start">Tombol Start</string>
    <string name="logo_onschool">Logo Onschool</string>
    <string name="gambar_profile_prestasi">Gambar_profile_prestasi</string>
    <string name="foto_profile">foto Profile</string>
    <string name="box_berita.isi_prestasi">Siswa kelas 12 Sekolah Kristen Ipeka BSD, Stanve Avrilium Widjaja meraih.............................................................................................\n....................................................................</string>
    <string name="photo_profile_penanya_pertanyaan">Photo Profile Penanya pertanyaan</string>
    <string name="tombol_jawab_pertanyaan">Tombol Jawab Pertanyaan</string>
    <string name="box_pertanyaan.nama">Nama Penanya</string>
    <string name="btn_follow">Follow</string>
    <string name="tombol_add">Tombol Add</string>
    <string name="box_pertanyaan.mapel">mata pelajaran</string>
    <string name="box_pertanyaan.coin">100 Coin</string>
    <string name="box_pertanyaan.pertanyaan">Apa perbedaan sifat fisika etana dan etanol? Mengapa demikian?</string>
    <string name="hint_tbx_pertanyaan_lokakarya">Ketik Pertanyaanmu</string>
    <string name="welcome_landing">Selamat Datang di Onschool</string>
    <string name="welcome_word_landing">Belajar dimana saja dan kapan saja\nOnschool Pilihannya!</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_login_with">or login with</string>
    <string name="silahkan_login">Silahkan Login!</string>
    <string name="lupa_password"><u>Lupa Password?</u></string>
    <string name="register"><u>Register</u></string>
    <string name="contoh_onschool_gmail_com">Contoh: onschool@gmail.com</string>
    <string name="hi">Hi,</string>
    <string name="nama_user_layout_home">nama user</string>
    <string name="mau_belajar_apa_hari_ini">Mau Belajar\nApa Hari Ini?</string>
    <string name="yakin_gak_mau_ikut">Yakin Gak Mau Ikut?</string>
    <string name="bantu_percahkan_masalah">Bantu Percahkan Masalah!!</string>
    <string name="nama_penanya_box_pertanyaan">Nama Pananya</string>
    <string name="manage_waktumu">Manage Waktumu!</string>
    <string name="btn_class">Class</string>
    <string name="btn_forum">Forum</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_materi">Materi</string>
    <string name="kelas_mapel.label1">Belajar Materi,Praktikum, dan Soal soal di\nONSchool.id</string>
    <string name="kelas_mapel.label2">Belajar ?ONSchool Pilihannya</string>
    <string name="cari_materi">Cari Materi IPA</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="pesan">Pesan</string>
    <string name="dukungan">Dukungan</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="box_mapel.fisika.judul">FISIKA</string>
    <string name="box_mapel.kimia.judul">KIMIA</string>
    <string name="box_mapel.biologi.judul">BIOLOGI</string>
    <string name="box_mapel.kelas">Kelas 10–12</string>
    <string name="mulai_atur_waktumu">Mulai Atur Waktumu!</string>
    <string name="login">Login</string>
    <string name="coin_balance">Coin Balance :</string>
    <string name="box_berita.judul_prestasi">Siswa indonesia Menang Olimpiade \nMatematika Tingkat Dunia!!</string>
    <string name="atur_jadwal_time">Today 9.40 PM</string>
</resources>