<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="77dp"
    android:background="@drawable/ic_bg_home"
    android:layout_gravity="bottom">

    <Button
        android:id="@+id/btn_kelas"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:paddingTop="6dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/ic_btn_class"
        android:text="@string/btn_class"
        android:textAppearance="@style/label_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_forum"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:paddingTop="5dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/ic_btn_forum"
        android:text="@string/btn_forum"
        android:textAppearance="@style/label_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_kelas" />

    <Button
        android:id="@+id/btn_materi"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:paddingTop="5dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/ic_btn_materi"
        android:text="@string/btn_materi"
        android:textAppearance="@style/label_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="84dp"
        android:layout_height="47dp"
        android:paddingTop="7dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/ic_btn_setting"
        android:text="@string/btn_setting"
        android:textAppearance="@style/label_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_homeOnschools"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/ic_circular"
        android:paddingTop="7dp"
        android:textAppearance="@style/label_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_materi"
        app:layout_constraintStart_toEndOf="@+id/btn_forum" />

</androidx.constraintlayout.widget.ConstraintLayout>
