<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_dasar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru_laut">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_depan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg_signup">
        <EditText
            android:id="@+id/tbx_nama_depan"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/biru_laut"
            android:hint="@string/nama_depan"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textAppearance="@style/roboto.biru_laut.Normal.12"
            android:textColorHint="@color/biru_laut"
            app:layout_constraintStart_toStartOf="@+id/tbx_email"
            app:layout_constraintTop_toTopOf="@id/atas_layout_signup"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tbx_nama_belakang"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/biru_laut"
            android:hint="@string/nama_belakang"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textAppearance="@style/roboto.biru_laut.Normal.12"
            android:textColorHint="@color/biru_laut"
            app:layout_constraintBaseline_toBaselineOf="@+id/tbx_nama_depan"
            app:layout_constraintEnd_toEndOf="@+id/tbx_email"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tbx_email"
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/biru_laut"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="36dp"
            android:textAlignment="textStart"
            android:textAppearance="@style/tbx_nama"
            android:textColorHint="@color/biru_laut"
            app:layout_constraintEnd_toStartOf="@+id/kanan_layout_signup"
            app:layout_constraintStart_toStartOf="@+id/kiri_layout_signup"
            app:layout_constraintTop_toBottomOf="@+id/tbx_nama_depan"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/icon_email"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginVertical="13dp"
            android:background="@drawable/ic_icon_email"
            app:layout_constraintBottom_toTopOf="@+id/contoh_email"
            app:layout_constraintEnd_toEndOf="@+id/tbx_email"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@+id/tbx_email"
            app:layout_constraintTop_toTopOf="@+id/tbx_email"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/contoh_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/contoh_onschool_gmail_com"
            android:textAppearance="@style/roboto.black.Normal.9"
            app:layout_constraintEnd_toEndOf="@+id/tbx_email"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/tbx_email"
            app:layout_constraintTop_toBottomOf="@+id/tbx_email" />

        <EditText
            android:id="@+id/tbx_password_signup"
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/biru_laut"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="36dp"
            android:textAlignment="textStart"
            android:textAppearance="@style/roboto.biru_laut.Normal.12"
            android:textColorHint="@color/biru_laut"
            app:layout_constraintEnd_toEndOf="@+id/tbx_email"
            app:layout_constraintStart_toStartOf="@+id/tbx_email"
            app:layout_constraintTop_toBottomOf="@+id/contoh_email"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/icon_pass"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginVertical="13dp"
            android:background="@drawable/ic_icon_pass"
            app:layout_constraintBottom_toBottomOf="@+id/tbx_password_signup"
            app:layout_constraintEnd_toEndOf="@+id/tbx_password_signup"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@+id/tbx_password_signup" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_btn_register"
            android:layout_width="170dp"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            app:cardCornerRadius="27dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tbx_password_signup"
            app:layout_constraintStart_toStartOf="@+id/tbx_password_signup"
            app:layout_constraintTop_toBottomOf="@+id/tbx_password_signup" >
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_btn_register"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/or_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/or_login_with"
            android:textAppearance="@style/roboto.black.Normal.14"
            app:layout_constraintEnd_toEndOf="@+id/card_btn_register"
            app:layout_constraintStart_toStartOf="@+id/card_btn_register"
            app:layout_constraintTop_toBottomOf="@+id/card_btn_register" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:buttonSize="icon_only"
            app:layout_constraintEnd_toEndOf="@+id/or_login_with"
            app:layout_constraintStart_toStartOf="@+id/or_login_with"
            app:layout_constraintTop_toBottomOf="@+id/or_login_with" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/kiri_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06326034" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bawah_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8946648" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/kanan_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94160587" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/atas_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>