<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/home.salam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/hi"
        android:textAppearance="@style/label_hi_layout_home"
        app:layout_constraintStart_toStartOf="@+id/guideline_kiri_layout_home"
        app:layout_constraintTop_toTopOf="@+id/home.guideline_atas" />

    <TextView
        android:id="@+id/home.nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_user_layout_home"
        android:textAppearance="@style/label_hi_layout_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/home.salam"
        app:layout_constraintStart_toEndOf="@+id/home.salam" />

    <androidx.cardview.widget.CardView
        android:id="@+id/home.profile.frame"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_kanan_layout_home"
        app:layout_constraintTop_toTopOf="@id/home.guideline_atas">

        <ImageButton
            android:id="@+id/home.profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_circular"
            android:scaleType="centerInside"
            android:src="@drawable/ic_photo_profile"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/home.label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mau_belajar_apa_hari_ini"
        android:textAppearance="@style/roboto.black.Bold.36"
        app:layout_constraintStart_toStartOf="@+id/guideline_kiri_layout_home"
        app:layout_constraintTop_toBottomOf="@+id/home.nama" />

    <Button
        android:id="@+id/home.btn_jadwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_btn_jadwal"
        android:text="@string/manage_waktumu"
        android:background="#00000000"
        android:textAppearance="@style/label_btn_jadwal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_kanan_layout_home"
        app:layout_constraintTop_toBottomOf="@+id/home.profile.frame" />

    <HorizontalScrollView
        android:id="@+id/home.frame.mapel"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/home.label1"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/home.btn_mapel.IPA"
                android:layout_marginHorizontal="10dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:background="@drawable/ic_btn_matkul_ipa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/home.btn_mapel.IPS"
                android:layout_marginHorizontal="10dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/ic_btn_matkul_ips"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home.btn_mapel.IPA"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/home.btn_mapel.Bahasa"
                android:layout_marginHorizontal="10dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/ic_btn_matkul_bahasa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home.btn_mapel.IPS"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/home.btn_mapel.umum"
                android:layout_marginHorizontal="10dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/ic_btn_matkul_umum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/home.btn_mapel.Bahasa"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <View
        android:id="@+id/home.garis_atas"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="32dp"
        android:background="#203498DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home.frame.mapel" />

    <TextView
        android:id="@+id/home.label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/yakin_gak_mau_ikut"
        android:textAppearance="@style/label_hi_layout_home"
        app:layout_constraintStart_toStartOf="@+id/home.guideline_kiri"
        app:layout_constraintTop_toBottomOf="@+id/home.garis_atas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home.frame.box_prestasi"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/home.label2"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="-46dp">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/home.garis_bawah"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="28dp"
        android:background="#203498DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home.frame.box_prestasi" />

    <TextView
        android:id="@+id/home.label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bantu_percahkan_masalah"
        android:textAppearance="@style/label_hi_layout_home"
        app:layout_constraintStart_toStartOf="@+id/home.guideline_kiri"
        app:layout_constraintTop_toBottomOf="@+id/home.garis_bawah" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home.frame.box_pertanyaan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home.guideline_kanan"
        app:layout_constraintStart_toStartOf="@+id/home.guideline_kiri"
        app:layout_constraintTop_toBottomOf="@+id/home.label3"
        tools:ignore="SpeakableTextPresentCheck"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home.guideline_atas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01504788" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home.guideline_kanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home.guideline_kiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03892944" />

    <include
        android:id="@+id/NavigationMenu"
        layout="@layout/layout_btn_home"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>